Fixed spacing for event header

--- a/app/assets/stylesheets/pages/_booth-show.scss
+++ b/app/assets/stylesheets/pages/_booth-show.scss
@@ -2,7 +2,7 @@
 
 .event-hero-header {
   background-color: $deep-navy;
-  padding: 2.5rem 0 2rem;
+  padding-bottom: 2.5rem;
   text-align: center;
   position: relative;
 }
